# ez-tauri

./: .changelogrc.json  .env.example  .env.production  .env.staging  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  RELEASE_TODO.md  docker-compose.yml  eslint.config.js  module_config.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts  wdio.config.ts
.github/: CONTRIBUTING.md  release-notes-template.md
.github/workflows/: ci.yml  dependency-update.yml  deploy.yml  release.yml
database/init/: 01_init.sql  02_seed.sql
modules/auth/: models.rs  module.json
modules/cache/: handlers.rs  mod.rs  module.json
modules/database/: module.json
modules/logging/: module.json
playwright-report/: index.html
scripts/: brand-utils.mjs  ez-modules.mjs
src/: App.test.tsx  App.tsx  index.css  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  test_utils.rs
src-tauri/src/handlers/: database.rs  filesystem.rs  logs.rs  mod.rs  system.rs  users.rs
src-tauri/src/logging/: config.rs  handlers.rs  mod.rs
src-tauri/src/models/: logs.rs  mod.rs  settings.rs  user.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/auth/: handlers.rs  mod.rs
src/api/: database.ts  index.ts  system.ts
src/components/: ErrorBoundary.tsx  index.ts
src/hooks/: index.ts
src/layouts/: Layout.tsx
src/pages/: Home.tsx
src/schemas/: index.ts
